# Juego-Senku-V-squez-Zuloeta

Proyecto_Vasquez_Zuloeta/: CAleman.cpp  CAleman.h  CAsimetrico.cpp  CAsimetrico.h  CDiamante.cpp  CDiamante.h  CFrances.cpp  CFrances.h  CFunciones.cpp  CFunciones.h  CFunciones_2.cpp  CFunciones_2.h  CIngles.cpp  CIngles.h  CMakeLists.txt  CTablero.cpp  CTablero.h  main.cpp
