cmake_minimum_required(VERSION 3.20)
project(Proyecto_Vasquez_Zuloeta)

set(CMAKE_CXX_STANDARD 20)

add_executable(Proyecto_Vasquez_Zuloeta main.cpp CTablero.cpp CTablero.h CFrances.h CFrances.cpp CFunciones.cpp CFunciones.h CAleman.cpp CAleman.h CAsimetrico.cpp CAsimetrico.h CIngles.h CIngles.cpp CDiamante.h CDiamante.cpp CFunciones_2.cpp CFunciones_2.h)
